--- a/style.css
+++ b/style.css
@@ -1,46 +1,40 @@
 body {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     color: #777;
     background: #777;
     width: 960px;
     font-size: 18px;
+    text-align: center;
     margin: auto;
-    padding: 10px;
 }
 header, nav, section, aside, footer {
     background: #ebebeb;
-    text-align: center;
+    margin-bottom: 20px;
 }
 article {
     color: #ebebeb;
     background: #777;
-    height: 200px;
-    width: 400px;
-    display: inline-block;
+    padding: 10px;
 }
-h1, p {
+.inArticle {
     color: #777;
     background: #ebebeb;
+    padding: 15px;
 }
 section {
     width: 495px;
-    text-align: center;
+    float: left;
+    padding: 10px;
 }
 .fullSpan {
     padding: 37px;
+    margin-top: 10px;
 }
 aside {
-    width: 450px;
     float: right;
-    text-align: top;
-    height: 170px
+    width: 420px;
+    height: 323px;
 }
-.container .halfSpan {
-    height:300px;
-}
-#inArticle {
-    height: 45px;
-    width: 350px;
-    display: inline-block;
-    color: #777;
+footer {
+    clear: both;
 }
